--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3'
 services:
-  idm-tools:
+  webapp:
     build: .
-    command: rails server -p 3000 -b '0.0.0.0'
     volumes:
-     - .:/rails-app
+     - .:/application
     ports: ['3000:3000','3001:3001']
     expose:
       - "3000"
       - "3001"
     stdin_open: true
     tty: true
-    container_name: idm-tools
+    container_name: openshift-hello-world
