--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: '3'
+volumes:
+  tmp:
 services:
   webapp:
     build: .
     image: idms-git-registry.oit.duke.edu/da129/openshift-hello-world
     volumes:
      - .:/application
+     - tmp:/tmp
     ports: ['3000:3000','3001:3001']
     expose:
       - "3000"
