--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
 services:
   webapp:
     build: .
-    image: idms-git-registry.oit.duke.edu/da129/openshift-hello-world 
+    image: idms-git-registry.oit.duke.edu/da129/openshift-hello-world:2.0
     volumes:
      - .:/application
      - tmp:/tmp
